--- a/assets/css/deveb.s0.1.css
+++ b/assets/css/deveb.s0.1.css
@@ -57,7 +57,7 @@ a{
   text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6{
-  /* Her durumda satır genişliğinide olması ayarı */
+  /* Her bulunduğu yerin genişliğinde olması ayarı */
   width: 100%;
   display: block;
   -webkit-margin-before: 0;
