--- a/assets/css/deveb.ilkel.s3.css
+++ b/assets/css/deveb.ilkel.s3.css
@@ -558,7 +558,7 @@ ul{
 }
 @media screen and (min-width: 48em){
    /* Dizüstü ve büyük: ort + */
-  .kaplama{
+  [data-deveb~="kaplama"]{
      max-width:980px !important;
    }
   [data-ort]{display:flex;}
