kaplama sınıfı taşındı

--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -2,19 +2,7 @@
 
     deveb (ilkel-sürüm 3.0.18)
 
-    TANIMLAMALAR
-		beri: CSS > margin          		dolgu: CSS > padding
-
-		data-gnl: (g)enel               data-byk: (b)ü(y)ü(k)
-    data-ufk: (uf)a(k)          		data-ort: (ort)a
-
-		p: (p)arça
-
-    • TEMİZLEME
-    • SEKME ÖRGÜSÜ
-    • KUTU DÜZENİ
-    • KAP ÖRGÜSÜ
-    • KAP ÖRGÜSÜ: SATIR SONU
+    Yeni gelen özellikler bu css dosyasında bulunmakta ve geliştirilmektedir.
 ========================================================================== */
 
 
