--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -1,3 +1,11 @@
+pre{
+	color: #000000;
+	background-color: #f0f0f0 !important;
+	padding: 1em;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	width: 100%;
+}
 .header{min-height: 75px;}
 .menu
 {
