--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -31,9 +31,8 @@
 }
 [data-btn~="genel"]{}
 [href][data-btn~="genel"]{
-	border:1px solid #2c1166;
-	background-color: #2c2171;
-	color:#fff;
+	border:1px solid #ddd;
+	background-color: #fff;
 }
 [href][data-btn~="genel"]:hover{
 	background-color: #2c1166;
