--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -34,7 +34,11 @@
 	border:1px solid #ddd;
 	background-color: #fff;
 }
-
+[data-btn~="engelli"]{
+  pointer-events: none;
+  opacity: 0.6;
+  background-color:#efefef !important;
+}
 /* ==========================================================================
     GENEL DEVEB ETKİLERİ
 -------------------------------------------------------------------------- */
