--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -46,7 +46,7 @@
 	background-color: #fff;
   color:#0275d8;
 }
-[href][data-btn~="engelli"]{
+[data-btn~="engelli"]{
   pointer-events: none;
   opacity: 0.6;
   color:#aaa;
