buton ve varsayılanlar değiştirildi.

--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -51,6 +51,9 @@
   opacity: 0.6;
   color:#aaa;
 }
+[data-btn~="byk"]{
+  padding: .8rem 2rem;
+}
 /* ==========================================================================
     GENEL DEVEB ETKİLERİ
 -------------------------------------------------------------------------- */
